2007-03-14  Mikhail Zabaluev  <mikhail.zabaluev@nokia.com>

	* src/sip-connection-sofia.c: (priv_disconnect),
	(priv_authenticate), (priv_handle_auth_register),
	(priv_handle_auth_extra), (priv_r_invite), (priv_r_register),
	(priv_r_message):
	More graceful handling of missing auth credentials, still has issues
	with the stack.
	* src/sip-media-channel.c: (sip_media_channel_peer_error):
	Added more status codes to the unimplemented auth error reporting case.

2007-03-14  Mikhail Zabaluev  <mikhail.zabaluev@nokia.com>

	* src/sip-connection-manager.c:
	(sip_connection_manager_new_connection):
	* src/sip-connection-private.h:
	* src/sip-connection.c: (sip_connection_set_property),
	(sip_connection_class_init):
	Implemented properties "extra-auth-user", "extra-auth-password".
	* src/sip-connection-sofia.c: (priv_authenticate),
	(priv_handle_auth_register), (priv_handle_auth_extra),
	(priv_r_invite), (priv_r_register), (priv_r_message):
	Separated authentication for REGISTER and other requests, the latter
	using new extra auth properties.
	Cleaned up the authentication code, fixed a memory leak.

2007-03-08  Robert McQueen  <robert.mcqueen@collabora.co.uk>

	* client/, generate/: Delete defunct directories.
	* configure.ac, Makefile.am: Update in light of deleted directories.
	* data/Makefile.am: Remove reference to obsolete siptest.manager.
	* src/Makefile.am: Add sofiasip.manager to CLEANFILES.

2007-03-08  Mikhail Zabaluev  <first.surname@nokia.com>

	* src/sip-connection-helpers.c: (sip_conn_update_nua_outbound),
	(sip_conn_update_nua_keepalive_interval),
	(sip_conn_update_nua_contact_features):
	* src/sip-connection-helpers.h:
	* src/sip-connection.c: (sip_connection_start_connecting):
	Support REGISTER keepalives through use of "expires" parameter
	in NUTAG_M_FEATURES.

2007-03-07  Mikhail Zabaluev  <first.surname@nokia.com>

	* src/sip-connection-helpers.c: (sip_conn_update_nua_outbound):
	Don't explicitly disable "natify" outbound option, necessary to